[project]
name = "jopbrainlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeroen Kroesen", email = "jeroen@kroesen.nu" }
]
requires-python = ">=3.12"
dependencies = [
    "joppylib",
    "pendulum>=3.1.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
joppylib = { git = "https://github.com/jeroenkroesen/joppylib.git", rev = "main" }
